--- a/style.css
+++ b/style.css
@@ -50,7 +50,21 @@ body {
 .slidearea img {
     width: 100%;
 }
+.slidearea .carousel{
+    position:relative;
+    
+}
+.slideImgText{
+    width:100%;
+    position: absolute;
+    margin-left: 100px;
+    top: 40%;
+    color: white;
+    
+}
 
+
+/* 
 .slidearea h2 {
     position: absolute;
     margin-left: 100px;
@@ -64,40 +78,46 @@ body {
     margin-left: 100px;
     top: 55%;
     color: white;
-}
+} */
 
 
 
-.sndsec {
-    /* background: white; */
+.secondSection {
+    background: white;
     padding: 60px;
-    background-image:url('bgcircle.png');
 
 }
 
-.sndsec .box {
-
+.secondSection .box {
     top: 25%;
 }
 
-.sndsec p {
+.secondSection p {
     margin-bottom: 100px;
+    text-align: justify;
 }
 
-.sndsec a {
+.secondSection a {
     background: rgb(9, 9, 107);
     text-align: center;
     padding: 10px 20px;
     font-size: 10px;
     color: white;
     text-decoration: none;
-
 }
+.secondSection h6{
+    background-image:url('bgcircle.png');
+    /* border:3px solid red; */
+}
+
+.secondSection img{
+    width:100%;
+    height:100%;
+}
+
 
 .businesslayer {
     background: rgb(201, 194, 203);
-    padding: 100px;
-
 }
 
 .businesslayer .box {
@@ -105,11 +125,10 @@ body {
     padding: 25px;
     background: white;
     text-align: center;
-
 }
+.businesslayer p{
+    text-align: justify;
 
-.businesslayer img {
-    padding: 40px;
 }
 
 .businesslayer .box a {
@@ -120,20 +139,20 @@ body {
 }
 
 .businesslayer .box h5 {
-    /* /* text-decoration: underline 5px  rgb(35, 75, 130); */
-    margin-left: 60px;
+     /* text-decoration: underline 5px  rgb(35, 75, 130); */
+    margin-left:20%;
     text-align: center;
     width:70%;
     border-bottom: solid 7px rgb(35, 75, 130);
-
 }
+
 
 .animationarea {
     background: rgb(17, 103, 156);
     /* text-align: center; */
     color: white;
     position: relative;
-    padding: 80px;
+    text-align: justify;
 }
 
 .xyz {
@@ -245,10 +264,6 @@ body {
     right: 15%;
 }
 
-
-
-
-
 .boxarea {
     /* background:blue; */
     /* padding:0; */
@@ -271,15 +286,18 @@ body {
     margin: 10px;
 }
 .largeimg{
-
     width:100%;
-    text-align: center;
-
+    /* text-align: center; */
 }
+.largeimg img{
+    width:100%
+    
+}
+
 
 .imgarea {
     background: rgb(223, 218, 218);
-    padding: 60px 0px;
+    padding: 60px;
     /* text-align: center; */
 }
 
@@ -289,7 +307,6 @@ body {
 
 .row1 {
     text-align: right;
-    margin: 100px;
 }
 
 .abc {
@@ -297,34 +314,38 @@ body {
     height: 300px;
     background: rgb(57, 57, 174);
     color: white;
-    /* text-align: center; */
-    display: flex;
-    align-items: center;
-
+    /* display: flex; */
 }
 
 .abc img {
     width: 100%;
     height: 100%;
     text-align: center;
-    margin-top: -100px;
+    margin-top: -50px;
+}
+.imgarea .abc .imgareaText{
+    margin-top:5%;
+    text-align: justify;
 }
 .row3{
-    /* background:red; */
+    text-align: center;
 }
 .row3 img {
     width: 70%;
     height: 70%;
     text-align: center;
-    /* margin-top: -30px; */
+    margin-top: 0px;
     /* background:white; */
     /* border:5px solid black; */
 }
-.row3 i{
-    margin-right:0px 300px;
-    padding:25px;
-    background:rgb(71, 81, 225);
-    border-radius:25%;
+.row3 a i{
+    margin-top:20px;
+    margin-right:10px;
+    padding:20px;
+    color:white;
+    background:blue;
+    text-align: center;
+    border-radius: 50%;
 }
 
 
@@ -336,6 +357,7 @@ body {
 
 .githubarea .box {
     padding: 30px 5px;
+    margin:15px;
     background: lab(85.61% 3.09 1.09);
 }
 
@@ -343,17 +365,15 @@ body {
     background: rgb(40, 38, 38);
     padding: 60px 0px;
     color: white;
-    /* text-align: center; */
+    text-align: justify;
 }
 
 .tablearea a {
     color: white;
-    text-decoration: none;
 }
-.tablearea  ul li{
-    list-style:none;
+.tablearea li i{
+    font-size:10px;
 }
-
 
 .tablearea h6 {
     background: rgb(75, 72, 72);
@@ -366,6 +386,10 @@ body {
 .tablearea p {
     text-align: justify;
 }
+.tablearea ul li{
+    list-style:none;
+}
+
 
 .tablearea img {
     width: 170px;
@@ -379,13 +403,13 @@ body {
     padding: 20px 0;
     color: white;
     text-align: right;
+    text-align: justify;
 }
 
 .footarea p {
-    /* left: 30px; */
+    left: 30px;
     font-size: 12px;
 }
-
 
 .footarea i {
     padding: 10px;
